Change html webpack plugin

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title><%= foo %></title>
     <meta charset="UTF-8" />
     <title>ts-demo-webpack</title>
   </head>
