--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= foo %></title>
     <meta charset="UTF-8" />
-    <title>ts-demo-webpack</title>
+    <title>TS Boilerplate</title>
+    <link rel="stylesheet" type="text/css" href="global.css">
   </head>
   <body>
     <div id="root"></div>
